# WebRTC

./: README.md
demo/: .gitignore
demo/spring/: .gitignore  README.md  pom.xml
demo/vue/: .gitignore  package-lock.json  package.json
demo/vue/src/: App.vue  main.js  router.js  store.js
demo/vue/src/views/: Use.vue
native/: .gitignore  CMakeLists.txt
native/CMakeModules/: FindFFMPEG.cmake  FindLibJpegTurbo.cmake  FindLibyuv.cmake
native/scripts/: build-linux.sh  build-mac.sh  build-windows.sh
native/src/jni/: bbm_webrtc_rtc4j_core_DataChannel.h  bbm_webrtc_rtc4j_core_ImageUtils.h  bbm_webrtc_rtc4j_core_PeerConnection.h  bbm_webrtc_rtc4j_core_RTC.h  bbm_webrtc_rtc4j_core_Utils.h  jni_utils.cpp  jni_utils.h
native/src/media/audio/: audio_device_module_wrapper.h  fake_audio_device_module.cpp  fake_audio_device_module.h
native/src/media/codec/: video_encoder_decoder_factory.cpp  video_encoder_decoder_factory.h
native/src/media/codec/h264/: ffmpeg_h264_encoder_impl.cpp  ffmpeg_h264_encoder_impl.h  h264.cpp  h264.h  open_h264_encoder_impl.cpp  open_h264_encoder_impl.h
native/src/media/video/: fake_video_capturer.cpp  fake_video_capturer.h
native/src/rtc/: rtc.cpp  rtc.h  rtc_observer.h
native/src/rtc/datachannel/: data_channel.cpp  data_channel.h
native/src/rtc/network/: socket_factory_wrapper.cpp  socket_factory_wrapper.h
native/src/rtc/peerconnection/: peer_connection.cpp  peer_connection.h
native/src/rtc/utils/: image_utils.cpp  image_utils.h
rtc4j/: .gitignore  pom.xml
rtc4j/script/: build-header-files.sh
(+29 files in other folders)
